--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,3 @@
-/* General Styles */
-
 * {
     margin: 0;
     padding: 0;
@@ -40,7 +38,7 @@ input {
 button {
     cursor: pointer;
     padding: 12px;
-    background: #7C5CBF;
+    background:#2a84ce;
     border: none;
     color: white;
     font-size: 16px;
@@ -48,7 +46,7 @@ button {
 }
 
 button:hover {
-    background: #6b47b8;
+    background:#0b6e29;
 }
 
 button:disabled {
@@ -56,7 +54,6 @@ button:disabled {
     background: #7c5cbf94;
 }
 
-/* Join Page Styles */
 
 .centered-form {
     background: #333744;
@@ -83,7 +80,6 @@ button:disabled {
     width: 100%;
 }
 
-/* Chat Page Layout */
 
 .chat {
     display: flex;
@@ -93,11 +89,10 @@ button:disabled {
     height: 100vh;
     color: white;
     background: #333744;
-    width: 225px;
+    width: 300px;
     overflow-y: scroll
 }
 
-/* Chat styles */
 
 .chat__main {
     flex-grow: 1;
@@ -112,7 +107,6 @@ button:disabled {
     overflow-y: scroll;
 }
 
-/* Message Styles */
 
 .message {
     margin-bottom: 16px;   
@@ -133,7 +127,6 @@ button:disabled {
     color: #0070CC;
 }
 
-/* Message Composition Styles */
 
 .compose {
     display: flex;
@@ -160,13 +153,18 @@ button:disabled {
     font-size: 14px;
 }
 
-/* Chat Sidebar Styles */
 
 .room-title {
     font-weight: 400;
     font-size: 22px;
     background: #2c2f3a;
     padding: 24px;   
+}
+.room-list {
+    font-weight: 500;
+    font-size: 22px;
+    background: #2c2f3a;
+    padding: 12px 24px 0 24px;  
 }
 
 .list-title {
@@ -175,7 +173,11 @@ button:disabled {
     margin-bottom: 4px;
     padding: 12px 24px 0 24px;
 }
-
+.rooms {
+    font-weight: 300;
+    background: #2c2f3a;
+    padding: 24px;  
+}
 .users {
     list-style-type: none;
     font-weight: 300;
