--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,7 +38,7 @@ input {
 button {
     cursor: pointer;
     padding: 12px;
-    background:#2a84ce;
+    background:#03b378;
     border: none;
     color: white;
     font-size: 16px;
@@ -48,9 +48,9 @@ button {
     border-radius: 70px;
     cursor: pointer;
     padding: 12px;
-    background:#000000;
+    background:#2ea73e;
     border: none;
-    color: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 16px;
     transition: background .3s ease;
     border: solid white;
