--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,7 +38,7 @@ input {
 button {
     cursor: pointer;
     padding: 12px;
-    background:#03b378;
+    background:#1a74bd;
     border: none;
     color: white;
     font-size: 16px;
